fixed header background the color and z-index weren't specified, meaning that other elements could cover up the background of the header when scrolling down

--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,8 @@ header {
     padding: 10px 10px;
     border-bottom: 1px solid seashell;
     align-items: center;
+    background-color: black;
+    z-index: 1000;
 }
 
 header img {
